ui/css/treeherder.css
/* ... */
.btn-black {
  background-color: #4a4a4a;
  border-color: #000000;
  color: white;
}
.btn-black:hover,
.btn-black:focus,
.btn-black:active,
.btn-black.active {
  background-color: #000000;
  border-color: #000000;
  color: white;
}
.btn-black.disabled:hover,
.btn-black.disabled:focus,
.btn-black.disabled:active,
.btn-black.disabled.active,
.btn-black[disabled]:hover,
.btn-black[disabled]:focus,
.btn-black[disabled]:active,
.btn-black[disabled].active,
fieldset[disabled] .btn-black:hover,
fieldset[disabled] .btn-black:focus,
fieldset[disabled] .btn-black:active,
fieldset[disabled] .btn-black.active {
  background-color: #000000;
  border-color: #000000;
}

.btn-black:hover,
.btn-black:focus,
.btn-black:active,
.btn-black.active {
  background-color: #000000;
  border-color: #000000;
  color: white;
}
.btn-black.disabled:hover,
.btn-black.disabled:focus,
.btn-black.disabled:active,
.btn-black.disabled.active,
.btn-black[disabled]:hover,
.btn-black[disabled]:focus,
.btn-black[disabled]:active,
.btn-black[disabled].active,
fieldset[disabled] .btn-black:hover,
fieldset[disabled] .btn-black:focus,
fieldset[disabled] .btn-black:active,
fieldset[disabled] .btn-black.active {
  background-color: #000000;
  border-color: #000000;
}

.btn-pink {
  color: rgba(250, 115, 172, 0.63);
  font-weight: bold;
}
.btn-pink:hover,
.btn-pink:focus,
.btn-pink:active,
.btn-pink.active {
  background-color: #f95a9d;
  border-color: #f8428f;
  color: white;
}
.btn-pink.disabled:hover,
.btn-pink.disabled:focus,
.btn-pink.disabled:active,
.btn-pink.disabled.active,
.btn-pink[disabled]:hover,
.btn-pink[disabled]:focus,
.btn-pink[disabled]:active,
.btn-pink[disabled].active,
fieldset[disabled] .btn-pink:hover,
fieldset[disabled] .btn-pink:focus,
fieldset[disabled] .btn-pink:active,
fieldset[disabled] .btn-pink.active {
  background-color: #fa73ac;
  border-color: #fa73ac;
}

.btn-repo {
  border-color: #c3c3c3;
  color: #7c7a7d;
  background-color: #eaeaea;
  border-bottom-left-radius: 0;
  border-top-left-radius: 0;
}
.btn-repo:hover,
.btn-repo:focus,
.btn-repo:active,
.btn-repo.active {
  background-color: #6f6d70;
  border-color: #626163;
  color: white;
}
.btn-repo.disabled:hover,
.btn-repo.disabled:focus,
.btn-repo.disabled:active,
.btn-repo.disabled.active,
.btn-repo[disabled]:hover,
.btn-repo[disabled]:focus,
.btn-repo[disabled]:active,
.btn-repo[disabled].active,
fieldset[disabled] .btn-repo:hover,
fieldset[disabled] .btn-repo:focus,
fieldset[disabled] .btn-repo:active,
fieldset[disabled] .btn-repo.active {
  background-color: #7c7a7d;
  border-color: #7c7a7d;
  color: white;
}

.label-initials {
  display: inline-block;
  margin-right: 0.2em;
  padding: 0.2em 0.3em;
  width: 2.5em;
  border: 1px solid #999999;
  background-color: white;
  color: #999999;
}

.white, .white a {
    color: white;
}

.lightgray, .lightgray a {
    color: lightgray;
}

.midgray, .midgray a {
    color: gray;
}

#help {
    padding: 10px 10px 0px;
    overflow: auto;
}

#help.dt, #help.dd {
    text-align: center;
}

#help.panel {
    padding: 5px;
}

.help-footer {
    overflow: auto;
}

.panel-spacing table {
    width: 100%;
}

.panel-spacing tr th:first-child {
    padding-right: 2em;
}

.panel-spacing tr:nth-child(even) {
    background-color: #f8f8f8;
}

.panel-spacing table tr {
    border-bottom: 1px dotted lightgrey;
}

/* override th bold */
#shortcuts tr th span {
    font-weight: normal;
}

.help-btn-sm tr > th > button {
    font-size: 13px;
    padding: 0px 2px;
    margin-top: 1px;
    border: 1px solid;
    border-radius: 3px;
    color: #b3b3b3;
    cursor: auto;
    background: #fff;
}

.help-btn-sm tr > th > button:focus {
    outline: 0;
}

.help-btn-desc tr > td {
    vertical-align: bottom;
}

.help-btn {
    margin: 2px;
    border: 2px solid;
}

.help-btn-comment {
    border: none;
    background-color: #fff;
}

.help-btn-orange {
    border-color: #dd6602;
}

.help-btn-purple {
    border-color: #6f0296;
}

.help-btn-red {
    border-color: #a1020e;
}

.help-btn-black {
    border-color: #000000;
}

.help-btn-bg {
    background-color: #fff;
}

.waiter-small{ background: url("../img/waiter16.png") no-repeat center center; width: 16px; height: 16px; display: inline-block;}
.waiter-medium{ background: url("../img/waiter32.png") no-repeat center center; width: 32px; height: 32px; display: inline-block;}
.waiter-large{ background: url("../img/waiter64.png") no-repeat center center; width: 64px; height: 64px; display: inline-block;}

.deleted{ text-decoration: line-through;}

.plugin_controls{ margin: 5px;}

.similar_jobs {
   display: -webkit-flex;
   display:         flex;
   -webkit-flex-flow: row;
           flex-flow: row;
}


div.similar_jobs .right_panel{ border-left: 1px solid #101010; margin-right: 1px; overflow-y: auto; flex: 1 1; -webkit-flex: 1 1; }
div.similar_jobs .right_panel form { overflow: hidden; background-color: #D3D3D3; }
div.similar_jobs .right_panel form .checkbox input[type="checkbox"] { margin-left: 0px; position: relative; }
div.similar_jobs .right_panel .similar_job_detail{ border-top: 1px solid #101010; }
div.similar_jobs .right_panel .similar_job_detail table { width: 100%; overflow: hidden; }

div.similar_jobs .left_panel{ overflow: auto; flex: 1 1; -webkit-flex: 1 1; }
div.similar_jobs .left_panel table{ margin-bottom: 7px;}
div.similar_jobs .left_panel table tr.active>td{ background-color: #D3D3D3; }
div.similar_jobs .left_panel table tr{ cursor: pointer; }

#notification_box{
    position:fixed;
    top:70px;
    right:10px;
    z-index: 1100;
}

#notification_box div.alert{
    margin-bottom:5px;
}

#notification_box button.close{position:relative; top:-2px; right:-8px; color:inherit}

.add-new-filter .form-group{
    margin-bottom: 5px;
}

.th-multi-select input[type=text]{
    width:534px;
}

.th-multi-select select{
    width:250px;
    font-size: 12px;
}

.th-multi-select button{
    width:30px;
}
/* ... */

